# wsbridge

./: README.md  pyproject.toml  test.py
src/wsbridge/: __init__.py  baseclient.py  simpleservice.py
